app/index.scss
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

*:not(input):not(textarea) {
  -webkit-user-select: none; /* disable selection/Copy of UIWebView */
  -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
}

html {
  -webkit-text-size-adjust: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

html, body, .main-react-container {
  height: 100%;
  overflow: hidden;
}

body {
  margin: 0;
  font-family: "Helvetica Neue", sans-serif;
}

a {
  color: hsl(200, 50%, 50%);
  text-decoration: none;
}

a:active {
  color: hsl(20, 50%, 50%);
}

.inside {
  margin: 0 auto;
  max-width: 940px;
}

.main-container {
  height: 100%;
  position: relative;
}

.app {
  height: 100%;
  padding-top: 75px;
}

.main-header {
  width: 100%;
  height: 75px;
  position: fixed;
  top: 0;
  left: 0;
  background: white;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
  z-index: 1;
  padding: 0 20px;
  text-align: center;

  transition: all .3s ease-out;
  transform: translate3d(0, 0, 0);
  display: flex;
  align-items: center;
  justify-content: space-between;

  .nav-edge {
    flex-shrink: 0;
  }

  .nav-button {
    width: 50px;
    height: 50px;
    text-indent: -999em;
    display: block;
  }

  .back-button {
    float: left;
    background: #009efF;

    &:active {
      background: darken(#009efF, 10%);
    }
  }

  .toggle-sidebar {
    float: right;
    background: #ff6100;

    &:active {
      background: darken(#ff6100, 10%);
    }
  }

  .header-title {
    overflow: hidden;
    padding: 0 10px;
    font-size: 25px;
    font-weight: 300;
    margin: 0;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.sidebar {
  padding: 20px;
  width: 75%;
  background: #d3d3d3;
  position: fixed;
  top: 0;
  left: 100%;
  bottom: 0;

  transition: all .3s ease-out;
  transform: translate3d(0, 0, 0);

  &.show-sidebar {
    transition: all .3s ease-out;
    transform: translate3d(-100%, 0, 0);
  }

  h1 {
    margin: 0;
  }
}

.list {
  margin: 20px 0;
  padding: 0;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-bottom: 0;
  overflow: hidden;

  > li {
    margin: 0;
    padding: 0 10px;
    list-style: none;
    height: 50px;
    line-height: 50px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    position: relative;

    a {
      width: 100%;
      height: 100%;
      display: block;
    }
  }
}

.overlay {
  z-index: 99;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.content {
  padding: 10px;
  padding-bottom: 100px;

  transition: all .3s ease-out;
  transform: translate3d(0, 0, 0);
}

.slide-out {
  transition: all .3s ease-out;
  transform: translate3d(-75%, 0, 0);
}

.record-item {
  overflow: hidden;
  border-bottom: 1px solid #d3d3d3;
  display: flex;

  &:first-child {
    border-top: 1px solid #d3d3d3;
  }

  &.pinned {
    background: #f4f8ff;
    border: 1px solid #d3d3d3;
  }

  .record-title-link {
    display: block;
    padding: 10px 0;
  }

  .info {
    padding: 0 10px 10px 10px;
    flex: 7;
    display: flex;
    flex-direction: column;
  }

  .score {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .domain {
    color: #646464;
    font-size: 12px;
  }

  .thumbnail {
    float: left;
    width: 80px;
    margin-right: 10px;
    border: 1px solid #888;
  }

  .meta {
    display: flex;
    flex-direction: rows;
    justify-content: space-between;
  }
}

.comment {
  background: rgba(0, 0, 0, 0.06);
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-right: 0;
  margin: 20px 0;

  .load-more-nested-comments {
    width: 100%;
    padding: 7px;
    display: inline-block;
    text-align: center;
    color: #575757;
    text-decoration: none;

    &:active {
      background: rgba(black, 0.1);
    }
  }

  .comment {
    margin-left: 3%;
  }
}

.comment-text {
  background: #FFF;
  border-left: 4px solid #ff5d09;
  padding: 0 30px 0 10px;
  overflow: hidden;
  border-right: 1px solid #e4e4e4;
  position: relative;

  .toggle-comment-visiblity {
    background: rgba(106, 148, 178, 0.34);
    float: right;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    width: 20px;

    &:active {
      background: darken(rgba(106, 148, 178, 0.34), 10%);
    }

    &.hidden-comments {
      background: #8a99ff;

      &:active {
        background: darken(#8a99ff, 10%);
      }
    }
  }

  .comment-date {
    color: #9e9e9e;
    font-size: 13px;
    font-weight: normal;
  }
}

.detail-view {
  border: 1px solid #c2cbc1;
  padding: 10px;
  margin-bottom: 20px;

  .detail-title {
    margin: 0;
  }

  .score {
    font-weight: normal;
  }
}

.favorite-list {
  margin: 0;
  padding: 0;
  border: 1px solid #d3d3d3;
  border-bottom: 0;
  overflow: hidden;

  .favorite-item {
    margin: 0;
    padding: 0;
    list-style: none;
    height: 50px;
    line-height: 50px;
    border-bottom: 1px solid #d3d3d3;
    position: relative;

    .list-item-inside {
      position: absolute;
      background: white;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      z-index: 2;
      padding: 0 10px;

      &.animate {
        transition: all .3s ease-out;
      }

      a {
        width: 100%;
        height: 100%;
        display: block;
      }
    }

    .list-item-behind {
      padding: 0 10px;
      background: #e7e7e7;
      position: absolute;
      z-index: 1;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
    }
  }
}

.button {
  width: 100%;
  background: #fc611f;
  color: white;
  display: inline-block;
  text-align: center;
  padding: 20px;

  &:active {
    color: white;
    background: darken(#fc611f, 10%);
  }
}

.add-new-favorite-button {
  margin: 20px 0;
}

.new-favorite-input {
  border: 0;
  outline: none;
  width: 100%;
  padding: 8px;
  background: #eaeaea;
  border-radius: 0;
  margin: 20px 0 0 0;
  font-size: 20px;
}

.toggle-list {
  margin: 0;
  padding: 0;
  text-align: center;
  border: 1px solid #AFBCCA;

  > li {
    margin: 0;
    padding: 0;
    list-style: none;
    display: inline-block;
    width: 100/3 * 1%;
    border-right: 1px solid #AFBCCA;

    &:last-child {
      border-right: 0;
    }
  }

  a {
    display: inline-block;
    background: #d7dde8;
    width: 100%;
    padding: 10px 0;

    &.active {
      background: #dde6f7;
    }

    &:active {
      background: darken(#d7dde8, 10%);
      color: #555B69;
    }
  }
}

.spinner {
  margin: 0 auto;
  width: 50px;
  height: 50px;
  position: relative;
}

.autocomplete-list {
  margin: 0 auto;
  width: 80%;
}

.gold-count {
  font-weight: normal;
  color: #937000;
}

.gold-icon {
  width: 15px;
  height: 15px;
  border-radius: 30px;
  background: #fffd3e;
  border: 1px solid #d8b813;
  display: inline-block;
  margin: 0 11px 0 4px;
  position: relative;
  top: 2px;
}

.scrollable {
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
  height: 100%;
}

.load-more-button {
  margin-top: 20px;
}

